// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optionSelectorField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_a8s2fv0 uv_a8s2fv1"
        name="test"
      >
        <label
          class="uv_f32sl0 uv_a8s2fv4 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
        >
          label
        </label>
        <div
          class="uv_a8s2fv6 uv_gqqb10"
        >
          <div
            aria-controls="_r_6_"
            aria-describedby="_r_6_"
            class="uv_pjfil59 uv_pjfil5b"
            tabindex="-1"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div
                aria-controls="_r_6_"
                aria-expanded="false"
                class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_4_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_y472cy4 uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81d uv_1yhcak835"
                  style="--uv_1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="uv_a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <title>
            RayStartArrowIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
          />
          <path
            d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
          />
        </svg>
        <div
          class="uv_a8s2fv8 uv_gqqb10"
        >
          <div
            aria-controls="_r_e_"
            aria-describedby="_r_e_"
            class="uv_pjfil59 uv_pjfil5b"
            tabindex="-1"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div
                aria-controls="_r_e_"
                aria-expanded="false"
                class="uv_y472cy6 uv_y472cy5 uv_y472cy7 uv_y472cya uv_y472cye"
                data-disabled="true"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_c_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_y472cy4 uv_1yhcak80 uv_1yhcak81 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak825"
                  style="--uv_1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;

exports[`optionSelectorField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_a8s2fv0 uv_a8s2fv1"
        name="test"
      >
        <label
          class="uv_f32sl0 uv_a8s2fv4 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
        >
          label
        </label>
        <div
          class="uv_a8s2fv6 uv_gqqb10"
        >
          <div
            aria-controls="_r_q_"
            aria-describedby="_r_q_"
            class="uv_pjfil59 uv_pjfil5b"
            tabindex="-1"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div
                aria-controls="_r_q_"
                aria-expanded="false"
                class="uv_y472cy6 uv_y472cy5 uv_y472cy7 uv_y472cya uv_y472cye"
                data-disabled="true"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_o_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_y472cy4 uv_1yhcak80 uv_1yhcak81 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak825"
                  style="--uv_1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="uv_a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <title>
            RayStartArrowIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
          />
          <path
            d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
          />
        </svg>
        <div
          class="uv_a8s2fv8 uv_gqqb10"
        >
          <div
            aria-controls="_r_12_"
            aria-describedby="_r_12_"
            class="uv_pjfil59 uv_pjfil5b"
            tabindex="-1"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div
                aria-controls="_r_12_"
                aria-expanded="false"
                class="uv_y472cy6 uv_y472cy5 uv_y472cy7 uv_y472cya uv_y472cye"
                data-disabled="true"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_10_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_y472cy4 uv_1yhcak80 uv_1yhcak81 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak825"
                  style="--uv_1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkzm"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;

exports[`optionSelectorField > should trigger events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <fieldset
        class="uv_a8s2fv0 uv_a8s2fv1"
        name="test"
      >
        <label
          class="uv_f32sl0 uv_a8s2fv4 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
        >
          label
        </label>
        <label
          class="uv_f32sl0 uv_a8s2fv5 uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8n uv_1yhcak81a uv_1yhcak832"
        >
          Second
        </label>
        <div
          class="uv_a8s2fv6 uv_gqqb10"
        >
          <div
            aria-controls="_r_1e_"
            aria-describedby="_r_1e_"
            class="uv_pjfil59 uv_pjfil5b"
            tabindex="-1"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div
                aria-controls="_r_1e_"
                aria-expanded="false"
                class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="first-selector"
                id="_r_1c_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_y472cym uv_1yhcak80 uv_1yhcak84 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81a uv_1yhcak832"
                >
                  <div
                    class="uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir935p"
                  >
                    <svg
                      class="uv_icons_1739vf22"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                    >
                      <title>
                        UbuntuLogo
                      </title>
                      <circle
                        cx="10"
                        cy="10"
                        fill="#f47421"
                        r="9"
                      />
                      <circle
                        cx="10"
                        cy="10"
                        fill="none"
                        r="4.365"
                        stroke="#fff"
                        stroke-width="1.71"
                      />
                      <circle
                        cx="3.88"
                        cy="10"
                        fill="#f47421"
                        r="1.688"
                      />
                      <path
                        d="M13.4 10h2"
                        stroke="#f47421"
                        stroke-width=".648"
                      />
                      <circle
                        cx="3.88"
                        cy="10"
                        fill="#fff"
                        r="1.201"
                      />
                      <g
                        transform="rotate(120 10 10)"
                      >
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#f47421"
                          r="1.688"
                        />
                        <path
                          d="M13.4 10h2"
                          stroke="#f47421"
                          stroke-width=".648"
                        />
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#fff"
                          r="1.201"
                        />
                      </g>
                      <g
                        transform="rotate(240 10 10)"
                      >
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#f47421"
                          r="1.688"
                        />
                        <path
                          d="M13.4 10h2"
                          stroke="#f47421"
                          stroke-width=".648"
                        />
                        <circle
                          cx="3.88"
                          cy="10"
                          fill="#fff"
                          r="1.201"
                        />
                      </g>
                    </svg>
                    Ubuntu
                  </div>
                </span>
                <div
                  class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <svg
          class="uv_a8s2fva uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz26"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <title>
            RayStartArrowIcon
          </title>
          <path
            clip-rule="evenodd"
            d="M2.5 10c0-.388.315-.703.703-.703h11.803l-1.969-1.829a.703.703 0 1 1 .957-1.03l3.281 3.047a.703.703 0 0 1 0 1.03l-3.28 3.047a.703.703 0 1 1-.958-1.03l1.97-1.829H3.202A.703.703 0 0 1 2.5 10"
          />
          <path
            d="M6.25 10a1.875 1.875 0 1 1-3.75 0 1.875 1.875 0 0 1 3.75 0"
          />
        </svg>
        <div
          class="uv_a8s2fv8 uv_gqqb10"
        >
          <div
            aria-controls="_r_1m_"
            aria-describedby="_r_1m_"
            class="uv_pjfil59 uv_pjfil5b"
            tabindex="-1"
          >
            <div
              class="uv_mxir930 uv_mxir932d uv_mxir935j"
            >
              <div
                aria-controls="_r_1m_"
                aria-expanded="false"
                class="uv_y472cy6 uv_y472cy5 uv_y472cya uv_y472cye"
                data-disabled="false"
                data-readonly="false"
                data-testid="second-selector"
                id="_r_1k_"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="uv_y472cy4 uv_1yhcak80 uv_1yhcak87 uv_1yhcak8b uv_1yhcak8j uv_1yhcak81d uv_1yhcak835"
                  style="--uv_1eu8od81: nowrap;"
                >
                  Select item
                </span>
                <div
                  class="uv_y472cy2 uv_mxir930 uv_mxir93d uv_mxir932j uv_mxir933p"
                >
                  <svg
                    aria-label="show dropdown"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title>
                      ArrowDownIcon
                    </title>
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </form>
  </div>
</DocumentFragment>
`;
